@@ -1,21 +1,25 @@
 package org.example.database;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.sql.Connection;
+import java.sql.PreparedStatement;
 import java.sql.SQLException;
-import java.sql.Statement;
 
 public class DatabaseInitService {
     public static void main(String[] args) {
         try (Connection connection = Database.getInstance().getConnection()) {
-            String sqlContent = new String(Files.readAllBytes(Paths.get("src/main/resources/main/resources/init_db.sql")));
-            Statement statement = connection.createStatement();
-            statement.execute(sqlContent);
-            System.out.println("Database initialized successfully.");
-        } catch (SQLException | IOException e) {
+            PreparedStatement preparedStatement = connection.prepareStatement(
+                    Files.readString(Path.of("src/main/resources/main/resources/init_db.sql"), StandardCharsets.UTF_8)
+            );
+            preparedStatement.execute();
+        }  catch (SQLException | IOException e) {
             e.printStackTrace();
         }
     }
 }
+
+
+
